--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -263,6 +263,7 @@ $primary-font:  'Lato', sans-serif;
         padding: 20px;
         margin-top: 50px;
         margin-bottom: 30px;
+        width: 1500px;
         &--name {
             margin: 0.2% 1.5%;
             width: 20%;
