--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -63,6 +63,9 @@
   .header__bottom--nav .dropdown {
     position: relative;
     display: inline-block; }
+    .header__bottom--nav .dropdown a:link, .header__bottom--nav .dropdown a:visited, .header__bottom--nav .dropdown a:active {
+      color: black;
+      text-decoration: none; }
   .header__bottom--nav .dropdown-content--categories {
     display: none;
     position: absolute;
@@ -71,28 +74,46 @@
     height: 400px;
     border: solid 4px #42a8e7;
     background-color: black;
-    min-width: 1180px;
+    min-width: 930px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
-    z-index: 1; }
-    .header__bottom--nav .dropdown-content--categories p {
+    z-index: 1;
+    text-align: left; }
+    .header__bottom--nav .dropdown-content--categories .category {
       color: white;
-      padding: 20px; }
+      z-index: 2;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      border-bottom: none; }
+      .header__bottom--nav .dropdown-content--categories .category li {
+        width: 215px;
+        padding: 15px 10px;
+        margin-left: -10px; }
   .header__bottom--nav .dropdown-content--brands {
     display: none;
     position: absolute;
     top: 60px;
-    left: -279px;
+    left: -23px;
     height: 400px;
     border: solid 4px #42a8e7;
     background-color: black;
-    min-width: 1180px;
+    min-width: 930px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
-    z-index: 1; }
-    .header__bottom--nav .dropdown-content--brands p {
+    z-index: 1;
+    text-align: left; }
+    .header__bottom--nav .dropdown-content--brands .category {
       color: white;
-      padding: 20px; }
+      z-index: 2;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      border-bottom: none; }
+      .header__bottom--nav .dropdown-content--brands .category li {
+        width: 215px;
+        padding: 15px 10px;
+        margin-left: -10px; }
   .header__bottom--nav .dropdown-content--catname--hover, .header__bottom--nav .dropdown-content--brandname--hover {
     display: inline-block;
     padding: 10px 0;
@@ -140,8 +161,8 @@
     display: block;
     z-index: 3; }
   .header__bottom--nav .dropdown:hover .dropdown-content--catname--hover, .header__bottom--nav .dropdown:hover .dropdown-content--brandname--hover,
-  .header__bottom--nav .dropdown-content--categories:hover
-.dropdown-content--catname--hover, .header__bottom--nav .dropdown-content--brands:hover .dropdown-content--brandname--hover {
+  .header__bottom--nav .dropdown-content--categories:hover, .header__bottom--nav .dropdown-content--brands:hover,
+  .header__bottom--nav .dropdown-content--categories:hover .dropdown-content--catname--hover, .header__bottom--nav .dropdown-content--brands:hover .dropdown-content--brandname--hover {
     display: block;
     z-index: 4; }
 
@@ -183,9 +204,10 @@
 .landing__brands {
   text-align: center;
   padding: 20px;
+  padding-left: 60px;
   margin-top: 50px;
   margin-bottom: 30px;
-  width: 1500px; }
+  width: 1400px; }
   .landing__brands--name {
     margin: 0.2% 1.5%;
     width: 20%;
@@ -281,3 +303,63 @@
         font-size: 1.1rem;
         letter-spacing: 2px;
         font-family: "Vollkorn", serif; }
+
+.register {
+  display: flex;
+  flex-direction: row; }
+  .register .login {
+    font-family: "Lato", sans-serif;
+    margin: 50px 30px;
+    margin-left: 290px;
+    width: 30%;
+    border-right: 5px solid #42a8e7; }
+    .register .login h3 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      padding: 30px;
+      padding-top: 0;
+      letter-spacing: 3px; }
+    .register .login label {
+      text-transform: uppercase;
+      display: block;
+      padding-bottom: 10px; }
+    .register .login input {
+      width: 200px;
+      height: 30px;
+      display: block;
+      margin-bottom: 20px; }
+    .register .login .remember-me {
+      display: inline;
+      margin-left: -155px;
+      margin-top: -20px; }
+    .register .login input[type="checkbox"] {
+      display: inline; }
+    .register .login input[type="submit"] {
+      font-size: 1.5rem;
+      width: 70px;
+      height: 30px;
+      text-transform: uppercase; }
+  .register .signup {
+    font-family: "Lato", sans-serif;
+    margin: 50px 30px;
+    width: 30%; }
+    .register .signup h3 {
+      text-transform: uppercase;
+      font-size: 2rem;
+      padding: 30px;
+      padding-top: 0;
+      letter-spacing: 3px; }
+    .register .signup label {
+      text-transform: uppercase;
+      display: block;
+      padding-bottom: 10px; }
+    .register .signup input {
+      width: 200px;
+      height: 30px;
+      display: block;
+      margin-bottom: 20px; }
+    .register .signup input[type="submit"] {
+      font-size: 1.5rem;
+      width: 70px;
+      height: 30px;
+      text-transform: uppercase; }
