--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -79,6 +79,10 @@ $primary-font:  'Lato', sans-serif;
         .dropdown {
             position: relative;
             display: inline-block;
+            a:link, a:visited, a:active {
+                color: black;
+                text-decoration: none;
+            }
         }
         .dropdown-content--categories {
             display: none;
@@ -88,32 +92,56 @@ $primary-font:  'Lato', sans-serif;
             height: 400px;
             border: solid 4px $primary-color;
             background-color: black;
-            min-width: 1180px;
+            min-width: 930px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             padding: 12px 16px;
             z-index: 1;
-            p {
+            text-align: left;
+            .category {
                 color: white;
-                padding: 20px;
+                z-index: 2;
+                text-align: left;
+                display: flex;
+                flex-direction: column;
+                border-bottom: none;
+                li {
+                    width: 215px;
+                    padding: 15px 10px;
+                    margin-left: -10px;
+
+                }
             }
         }
+
         .dropdown-content--brands {
             display: none;
             position: absolute;
             top: 60px;
-            left: -279px;
+            left: -23px;
             height: 400px;
             border: solid 4px $primary-color;
             background-color: black;
-            min-width: 1180px;
+            min-width: 930px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             padding: 12px 16px;
             z-index: 1;
-            p {
+            text-align: left;
+            .category {
                 color: white;
-                padding: 20px;
+                z-index: 2;
+                text-align: left;
+                display: flex;
+                flex-direction: column;
+                border-bottom: none;
+                li {
+                    width: 215px;
+                    padding: 15px 10px;
+                    margin-left: -10px;
+
+                }
             }
         }
+
         .dropdown-content--catname--hover, .dropdown-content--brandname--hover {
             display: inline-block;
             padding: 10px 0;
@@ -159,7 +187,7 @@ $primary-font:  'Lato', sans-serif;
 
         // drop down menu on hover
         .dropdown:hover .dropdown-content--categories, .dropdown:hover .dropdown-content--brands,
-        .dropdown-content--categories:hover .dropdown-content--categories, .dropdown-content--brands:hover .dropdown-content--brands {
+        .dropdown-content--categories:hover .dropdown-content--categories, .dropdown-content--brands:hover .dropdown-content--brands,  {
             display: block;
             z-index: 2;
         }
@@ -174,8 +202,8 @@ $primary-font:  'Lato', sans-serif;
 
         // change title
         .dropdown:hover .dropdown-content--catname--hover, .dropdown:hover .dropdown-content--brandname--hover,
-        .dropdown-content--categories:hover
-        .dropdown-content--catname--hover, .dropdown-content--brands:hover .dropdown-content--brandname--hover 
+        .dropdown-content--categories:hover, .dropdown-content--brands:hover,
+        .dropdown-content--categories:hover .dropdown-content--catname--hover, .dropdown-content--brands:hover .dropdown-content--brandname--hover 
         {
             display: block;
             z-index: 4;
@@ -263,9 +291,10 @@ $primary-font:  'Lato', sans-serif;
     &__brands {
         text-align: center;
         padding: 20px;
+        padding-left: 60px;
         margin-top: 50px;
         margin-bottom: 30px;
-        width: 1500px;
+        width: 1400px;
         &--name {
             margin: 0.2% 1.5%;
             width: 20%;
@@ -397,5 +426,79 @@ $primary-font:  'Lato', sans-serif;
                 font-family: $tertiary-font;
         }
     }
+    }
+}
+
+// Login page
+.register{
+    display: flex;
+    flex-direction: row;
+    .login {
+        font-family: $primary-font;
+        margin: 50px 30px;
+        margin-left: 290px;
+        width: 30%;
+        border-right: 5px solid $primary-color;
+        h3 {
+            text-transform: uppercase;
+            font-size: 2rem;
+            padding: 30px;
+            padding-top: 0;
+            letter-spacing: 3px;
+        }
+        label {
+            text-transform: uppercase;
+            display: block;
+            padding-bottom: 10px;
+        }
+        input {
+            width: 200px;
+            height: 30px;
+            display: block;
+            margin-bottom: 20px;
+        }
+        .remember-me {
+            display: inline;
+            margin-left: -155px;
+            margin-top: -20px;
+        }
+        input[type="checkbox"] {
+            display: inline;
+        }
+        input[type="submit"] {
+            font-size: 1.5rem;
+            width: 70px;
+            height: 30px;
+            text-transform: uppercase;
+        }
+    }
+    .signup {
+        font-family: $primary-font;
+        margin: 50px 30px;
+        width: 30%;
+        h3 {
+            text-transform: uppercase;
+            font-size: 2rem;
+            padding: 30px;
+            padding-top: 0;
+            letter-spacing: 3px;
+        }
+        label {
+            text-transform: uppercase;
+            display: block;
+            padding-bottom: 10px;
+        }
+        input {
+            width: 200px;
+            height: 30px;
+            display: block;
+            margin-bottom: 20px;
+        }
+        input[type="submit"] {
+            font-size: 1.5rem;
+            width: 70px;
+            height: 30px;
+            text-transform: uppercase;
+        }
     }
 }
