--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -306,58 +306,95 @@
 
 .register {
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px; }
   .register .login {
     font-family: "Lato", sans-serif;
-    margin: 50px 30px;
-    margin-left: 290px;
-    width: 30%;
-    border-right: 5px solid #42a8e7; }
+    width: 30%; }
     .register .login h3 {
       text-transform: uppercase;
       font-size: 2rem;
       padding: 30px;
       padding-top: 0;
       letter-spacing: 3px; }
+      .register .login h3 .current-register {
+        color: #42a8e7; }
+      .register .login h3 a.other-register {
+        color: black;
+        text-decoration: none;
+        padding-bottom: 10px; }
+      .register .login h3 a:hover.other-register {
+        border-bottom: #42a8e7 solid 3px; }
     .register .login label {
       text-transform: uppercase;
       display: block;
       padding-bottom: 10px; }
     .register .login input {
-      width: 200px;
-      height: 30px;
+      width: 400px;
+      height: 40px;
       display: block;
       margin-bottom: 20px; }
     .register .login .remember-me {
-      display: inline;
-      margin-left: -155px;
-      margin-top: -20px; }
-    .register .login input[type="checkbox"] {
-      display: inline; }
+      margin-top: -20px;
+      display: flex;
+      align-items: center; }
+      .register .login .remember-me label, .register .login .remember-me input {
+        display: inline;
+        vertical-align: center;
+        padding: 0;
+        margin: 0;
+        text-transform: capitalize; }
+      .register .login .remember-me input {
+        width: 30px;
+        height: 60px; }
     .register .login input[type="submit"] {
-      font-size: 1.5rem;
-      width: 70px;
-      height: 30px;
-      text-transform: uppercase; }
+      font-size: 3rem;
+      width: 200px;
+      height: 100px;
+      text-transform: uppercase;
+      text-align: center; }
+    .register .login a.forget-password {
+      color: #42a8e7;
+      text-decoration: none; }
   .register .signup {
     font-family: "Lato", sans-serif;
     margin: 50px 30px;
-    width: 30%; }
+    width: 30%;
+    margin-top: 0; }
+    .register .signup table {
+      margin-left: -170px; }
+      .register .signup table td {
+        padding-right: 20px; }
     .register .signup h3 {
       text-transform: uppercase;
       font-size: 2rem;
       padding: 30px;
       padding-top: 0;
       letter-spacing: 3px; }
+      .register .signup h3 .current-register {
+        color: #42a8e7; }
+      .register .signup h3 a.other-register {
+        color: black;
+        text-decoration: none;
+        padding-bottom: 10px; }
+      .register .signup h3 a:hover.other-register {
+        border-bottom: #42a8e7 solid 3px; }
     .register .signup label {
       text-transform: uppercase;
       display: block;
       padding-bottom: 10px; }
     .register .signup input {
-      width: 200px;
-      height: 30px;
+      width: 350px;
+      height: 40px;
       display: block;
       margin-bottom: 20px; }
+    .register .signup select {
+      width: 32%;
+      height: 40px;
+      margin-right: 9px;
+      margin-bottom: 20px;
+      font-size: 0.9rem; }
     .register .signup input[type="submit"] {
       font-size: 1.5rem;
       width: 70px;
