--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -433,18 +433,28 @@ $primary-font:  'Lato', sans-serif;
 .register{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
     .login {
         font-family: $primary-font;
-        margin: 50px 30px;
-        margin-left: 290px;
         width: 30%;
-        border-right: 5px solid $primary-color;
         h3 {
             text-transform: uppercase;
             font-size: 2rem;
             padding: 30px;
             padding-top: 0;
             letter-spacing: 3px;
+            .current-register {
+                color: $primary-color;
+            }
+            a.other-register {
+                color: black;
+                text-decoration: none;
+                padding-bottom: 10px;
+            }
+            a:hover.other-register {
+                border-bottom: $primary-color solid 3px;
+            }
         }
         label {
             text-transform: uppercase;
@@ -452,36 +462,67 @@ $primary-font:  'Lato', sans-serif;
             padding-bottom: 10px;
         }
         input {
-            width: 200px;
-            height: 30px;
+            width: 400px;
+            height: 40px;
             display: block;
             margin-bottom: 20px;
         }
         .remember-me {
-            display: inline;
-            margin-left: -155px;
             margin-top: -20px;
-        }
-        input[type="checkbox"] {
-            display: inline;
+            display: flex;
+            align-items: center;
+            label, input {
+                display: inline;
+                vertical-align: center;
+                padding: 0;
+                margin: 0;
+                text-transform: capitalize;
+            }
+            input {
+                width: 30px;
+                height: 60px;
+            }
         }
         input[type="submit"] {
-            font-size: 1.5rem;
-            width: 70px;
-            height: 30px;
+            font-size: 3rem;
+            width: 200px;
+            height: 100px;
             text-transform: uppercase;
+            text-align: center;
+        }
+        a.forget-password {
+            color: $primary-color;
+            text-decoration: none;
         }
     }
     .signup {
         font-family: $primary-font;
         margin: 50px 30px;
         width: 30%;
+        margin-top: 0;
+        table {
+            margin-left: -170px;
+            td {
+                padding-right: 20px;
+            }
+        }
         h3 {
             text-transform: uppercase;
             font-size: 2rem;
             padding: 30px;
             padding-top: 0;
             letter-spacing: 3px;
+            .current-register {
+                color: $primary-color;
+            }
+            a.other-register {
+                color: black;
+                text-decoration: none;
+                padding-bottom: 10px;
+            }
+            a:hover.other-register {
+                border-bottom: $primary-color solid 3px;
+            }
         }
         label {
             text-transform: uppercase;
@@ -489,10 +530,17 @@ $primary-font:  'Lato', sans-serif;
             padding-bottom: 10px;
         }
         input {
-            width: 200px;
-            height: 30px;
+            width: 350px;
+            height: 40px;
             display: block;
             margin-bottom: 20px;
+        }
+        select {
+            width: 32%;
+            height: 40px;
+            margin-right: 9px;
+            margin-bottom: 20px;
+            font-size: 0.9rem;
         }
         input[type="submit"] {
             font-size: 1.5rem;
