--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -15,7 +15,8 @@
     list-style: none;
     text-align: right; }
     .header__top--contact li ul {
-      display: inline-block; }
+      display: inline-block;
+      margin: auto 1%; }
 
 .header__top--nav {
   font-family: "Questrial", sans-serif;
@@ -178,8 +179,10 @@
     margin-right: auto; }
 
 .landing__just-arrived, .landing__bestsellers {
-  margin-top: 50px;
-  margin-bottom: 30px; }
+  margin-top: 20px;
+  padding-top: 30px;
+  margin-bottom: 20px;
+  background-color: #eff3f5; }
   .landing__just-arrived h3, .landing__bestsellers h3 {
     text-align: center;
     font-family: "Lato", sans-serif;
@@ -249,7 +252,9 @@
 
 .landing__article {
   position: relative;
-  margin-top: 20px; }
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #c3c3c3; }
   .landing__article img {
     width: 97vw;
     max-width: 1192.13px;
