--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -295,10 +295,10 @@
   display: flex;
   justify-content: center; }
   .shop-all .filter {
-    padding: auto 20px;
-    padding-left: 5%;
+    padding: auto 10px;
+    padding-left: 3%;
     padding-top: 30px;
-    width: 20%; }
+    width: 260px; }
     .shop-all .filter h3 {
       margin: 20px auto;
       text-transform: uppercase;
@@ -307,23 +307,26 @@
       border-bottom: #42a8e7 solid 3px;
       letter-spacing: 2px; }
     .shop-all .filter label {
-      padding: 10px;
+      padding: 2px 10px;
       letter-spacing: 1px; }
     .shop-all .filter input {
       margin: 8px auto; }
   .shop-all .products-gallery {
-    width: 70%;
+    width: 70vw;
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     flex-wrap: wrap;
-    padding: 30px; }
-    .shop-all .products-gallery img {
-      width: 150px;
-      height: 150px; }
+    padding: 30px 0; }
     .shop-all .products-gallery .product {
+      display: inline-block;
       padding: 10px;
-      width: 20%;
-      text-align: center; }
+      width: 180px;
+      text-align: center;
+      font-size: 0.9rem; }
+      .shop-all .products-gallery .product img {
+        width: 140px;
+        height: 130px; }
       .shop-all .products-gallery .product-brand {
         font-weight: bold;
         font-size: 1.1rem;
