--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -413,10 +413,10 @@ $primary-font:  'Lato', sans-serif;
     display: flex;
     justify-content: center;
     .filter {
-        padding: auto 20px;
-        padding-left: 5%;
+        padding: auto 10px;
+        padding-left: 3%;
         padding-top: 30px;
-        width: 20%;
+        width: 260px;
         h3 {
             margin: 20px auto;
             text-transform: uppercase;
@@ -426,7 +426,7 @@ $primary-font:  'Lato', sans-serif;
             letter-spacing: 2px;
         }
         label {
-            padding: 10px;
+            padding: 2px 10px;
             letter-spacing: 1px;
         }
         input {
@@ -434,26 +434,29 @@ $primary-font:  'Lato', sans-serif;
         }
     }
     .products-gallery {
-        width: 70%;
+        width: 70vw;
         display: flex;
         flex-direction: row;
+        justify-content: flex-end;
         flex-wrap: wrap;
-        padding: 30px;
-        img {
-            width: 150px;
-            height: 150px;
-        }
+        padding: 30px 0;
         .product {
+            display: inline-block;
             padding: 10px;
-            width: 20%;
+            width: 180px;
             text-align: center;
+            font-size: 0.9rem;
+            img {
+                width: 140px;
+                height: 130px;
+            }
             &-brand {
                 font-weight: bold;
                 font-size: 1.1rem;
                 letter-spacing: 2px;
                 font-family: $tertiary-font;
+            }
         }
-    }
     }
 }
 
