--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -295,10 +295,15 @@
   display: flex;
   justify-content: center; }
   .shop-all .filter {
+    margin-left: 3%;
     padding: auto 10px;
     padding-left: 3%;
+    padding-right: 3%;
     padding-top: 30px;
-    width: 260px; }
+    padding-bottom: 30px;
+    min-width: 300px;
+    height: 100%;
+    background-color: #eff3f5; }
     .shop-all .filter h3 {
       margin: 20px auto;
       text-transform: uppercase;
@@ -312,26 +317,32 @@
     .shop-all .filter input {
       margin: 8px auto; }
   .shop-all .products-gallery {
-    width: 70vw;
+    width: 75vw;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 30px 0; }
+    padding: 30px 20px; }
     .shop-all .products-gallery .product {
       display: inline-block;
-      padding: 10px;
+      padding: 10px 8px;
       width: 180px;
       text-align: center;
       font-size: 0.9rem; }
       .shop-all .products-gallery .product img {
-        width: 140px;
-        height: 130px; }
+        width: 160px;
+        height: 150px; }
       .shop-all .products-gallery .product-brand {
         font-weight: bold;
         font-size: 1.1rem;
         letter-spacing: 2px;
         font-family: "Vollkorn", serif; }
+      .shop-all .products-gallery .product-description {
+        background-color: #c9d6de;
+        width: 100%;
+        height: 125px;
+        font-size: 0.9rem;
+        padding: 5px; }
 
 .register {
   display: flex;
