--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -413,10 +413,15 @@ $primary-font:  'Lato', sans-serif;
     display: flex;
     justify-content: center;
     .filter {
+        margin-left: 3%;
         padding: auto 10px;
         padding-left: 3%;
+        padding-right: 3%;
         padding-top: 30px;
-        width: 260px;
+        padding-bottom: 30px;
+        min-width: 300px;
+        height: 100%;
+        background-color: #eff3f5;
         h3 {
             margin: 20px auto;
             text-transform: uppercase;
@@ -434,27 +439,34 @@ $primary-font:  'Lato', sans-serif;
         }
     }
     .products-gallery {
-        width: 70vw;
+        width: 75vw;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-evenly;
         flex-wrap: wrap;
-        padding: 30px 0;
+        padding: 30px 20px;
         .product {
             display: inline-block;
-            padding: 10px;
+            padding: 10px 8px;
             width: 180px;
             text-align: center;
             font-size: 0.9rem;
             img {
-                width: 140px;
-                height: 130px;
+                width: 160px;
+                height: 150px;
             }
             &-brand {
                 font-weight: bold;
                 font-size: 1.1rem;
                 letter-spacing: 2px;
                 font-family: $tertiary-font;
+            }
+            &-description {
+                background-color: #c9d6de;
+                width: 100%;
+                height: 125px;
+                font-size: 0.9rem;
+                padding: 5px;
             }
         }
     }
