--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -1,4 +1,9 @@
-$primary-color: #42a8e7;
+$primary-originalcolor: #42a8e7;
+$primary-color: #3d8ab9;
+$primary-darkcolor: #2f6484;
+$secondary-lightcolor: #eff3f5; 
+$secondary-darkcolor: #c9d6de;
+$tertiary-color: #1a1f21;
 $secondary-font: 'Questrial', sans-serif;
 $tertiary-font: 'Vollkorn', serif;
 $primary-font:  'Lato', sans-serif;
@@ -9,6 +14,7 @@ $primary-font:  'Lato', sans-serif;
     box-sizing: border-box;
 }
 
+// Header
 .header {
     &__top--contact {
         font-family: $secondary-font;
@@ -32,6 +38,7 @@ $primary-font:  'Lato', sans-serif;
         text-transform: uppercase;
         padding: 15px 20px;
         padding-bottom: 0;
+        padding-top: 0;
         letter-spacing: 2px;
         font-size: 1rem;
         li {
@@ -55,6 +62,7 @@ $primary-font:  'Lato', sans-serif;
         width: 400px;
         padding: 0px 20px;
         margin-top: -15px;
+        margin-bottom: 20px;
     }
     &__bottom--nav {
         text-align: center;
@@ -91,8 +99,8 @@ $primary-font:  'Lato', sans-serif;
             top: 60px;
             left: -23px;
             height: 380px;
-            border: solid 4px $primary-color;
-            background-color: black;
+            border: solid 4px $secondary-darkcolor;
+            background-color: $secondary-lightcolor;
             // min-width: 930px;
             width: 268px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -100,7 +108,7 @@ $primary-font:  'Lato', sans-serif;
             z-index: 1;
             text-align: left;
             .category {
-                color: white;
+                color: $primary-color;
                 z-index: 2;
                 text-align: left;
                 display: flex;
@@ -121,15 +129,15 @@ $primary-font:  'Lato', sans-serif;
             top: 60px;
             left: -23px;
             height: 380px;
-            border: solid 4px $primary-color;
-            background-color: black;
+            border: solid 4px $secondary-darkcolor;
+            background-color: $secondary-lightcolor;
             width: 220px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             padding: 12px 16px;
             z-index: 1;
             text-align: left;
             .category {
-                color: white;
+                color: $primary-color;
                 z-index: 2;
                 text-align: left;
                 display: flex;
@@ -147,7 +155,7 @@ $primary-font:  'Lato', sans-serif;
         .dropdown-content--catname--hover, .dropdown-content--brandname--hover {
             display: inline-block;
             padding: 10px 0;
-            color: white;
+            color: black;
             border-bottom: solid $primary-color 3px;
             font-family: $secondary-font;
             letter-spacing: 2px;
@@ -160,7 +168,7 @@ $primary-font:  'Lato', sans-serif;
         // put box behind title
         .dropdown-content--catbox {
             display: none;
-            background-color: black;
+            background-color: $secondary-darkcolor;
             width: 268px;
             height: 74px;
             z-index: 1;
@@ -169,12 +177,12 @@ $primary-font:  'Lato', sans-serif;
             border-top-right-radius: 10px;
             top: -10px;
             left: -23px;
-            border: solid 4px $primary-color;
+            border: solid 4px $secondary-darkcolor;
             border-bottom: none;
         }
         .dropdown-content--brandbox {
             display: none;
-            background-color: black;
+            background-color: $secondary-darkcolor;
             width: 220px;
             height: 74px;
             z-index: 1;
@@ -183,7 +191,7 @@ $primary-font:  'Lato', sans-serif;
             border-top-right-radius: 10px;
             top: -10px;
             left: -23px;
-            border: solid 4px $primary-color;
+            border: solid 4px $secondary-darkcolor;
             border-bottom: none;
         }   
 
@@ -214,10 +222,12 @@ $primary-font:  'Lato', sans-serif;
     }
 }
 
+// Landing page
 .landing {
     &__ads {
         padding: 5px 20px;
-        margin-bottom: 40px;
+        // border: solid 4px $tertiary-color;
+        // background-color: $tertiary-color;
         img {
             width: 97vw;
             height: 400px;
@@ -260,11 +270,12 @@ $primary-font:  'Lato', sans-serif;
     //   }
 
 
-
-    &__just-arrived, &__bestsellers {
-        margin-top: 20px;
-        padding-top: 30px;
+    &__just-arrived {
         margin-bottom: 20px;
+    }
+    &__just-arrived, &__bestsellers {
+        padding-top: 40px;
+        padding-bottom: 20px;
         background-color: #eff3f5;
         h3 {
             text-align: center;
@@ -286,8 +297,9 @@ $primary-font:  'Lato', sans-serif;
             width: 98vw;
             margin: 10px 20px;
             margin-left: 0;
-            background-color: #eff3f5;
+            background-color: #eff3f5; 
             overflow: hidden;
+            position: relative;
             img {
                 width: 180px;
                 height: 180px;
@@ -304,6 +316,7 @@ $primary-font:  'Lato', sans-serif;
                     height: 125px;
                     font-size: 0.9rem;
                     padding: 5px;
+                    border-top: solid 4px $primary-color;
                 }
                 &-brand {
                     font-weight: bold;
@@ -311,6 +324,29 @@ $primary-font:  'Lato', sans-serif;
                     letter-spacing: 2px;
                     font-family: $tertiary-font;
                 }
+            }
+            /* Next & previous buttons */
+            .prev, .next {
+                cursor: pointer;
+                position: absolute;
+                top: 40%;
+                color: black;
+                font-weight: bold;
+                font-size: 30px;
+                transition: 0.6s ease;
+            }
+            
+            /* Position the "next button" to the right */
+            .next {
+                right: 25px;
+            }
+            .prev {
+                left: 25px;
+            }
+            
+            /* On hover, change color */
+            .prev:hover, .next:hover {
+                color: $primary-color !important;
             }
         }
     }
@@ -342,54 +378,61 @@ $primary-font:  'Lato', sans-serif;
             padding: 20px;
         }
     }
-    &__article {
+    &__blog {
+        margin: 0;
         position: relative;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        background-color: #c3c3c3;
-        img {
-            width: 97vw;
-            max-width: 1192.13px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+        background-color: $secondary-darkcolor;
+        display: flex;
+        justify-content: center;
+        padding-top: 25px;
+        padding-bottom: 25px; 
+        width: 100vw;
+        font-family: $primary-font;
+        border-top: solid 4px #a6b6bd;
+        border-bottom: solid 4px #a6b6bd;
+        &--pic {
+            display: inline-block;
+            width: 420px;
+            height: 100%;
+            img {
+                padding-top: 0;
+                width: 50%;
+                height: 100%;
+                display: inline-block;
+            }
         }
-        &--description {
-            position: absolute; 
-            top: 200px;
-            left: 180px;
-            font-size: 2.5rem;
-            font-family: $tertiary-font;
-            padding-bottom: 8px;
-            border-bottom: 3px solid $primary-color;
-        }
-        &--subdescription {
-            position: absolute; 
-            color: $primary-color;
-            top: 270px;
-            left: 180px;
-            font-size: 1.2rem;
-            font-family: $secondary-font;
+        &--read {
+            display: inline-block;
+            width: 50%;
+            min-height: 400px;
+            background-color: $secondary-lightcolor;
+            padding: 50px 45px;
+            position: relative;
+            h3 {
+                font-size: 2rem;
+                font-weight: bold;
+                margin: 20px auto;
+                margin-left: 0;
+                border-bottom: 4px solid $primary-color;
+                width: 260px;
+                padding-bottom: 10px;
+            }
+            p {
+                padding: auto 10px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+            button {
+                background-color: $secondary-darkcolor;
+                width: 200px;
+                height: 40px;
+                color: black;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                font-weight: bold;
+            }
         }
     }
-    // &__read-button {
-    //     position: absolute;
-    //     top: 290px;
-    //     left: 180px;
-    //     background-color: white;
-    //     width: 350px;
-    //     text-align: center;
-    //     border: black 1px solid;
-    //     text-transform: uppercase;
-    //     font-family: $secondary-font;
-    //     padding: 10px 7px;
-    //     color: $primary-color;
-    //     border: $primary-color 1px solid;
-    // }
-    // &__read-button:hover {
-    //     color: $primary-color;
-    //     border: $primary-color 1px solid;
-    // }
 }
 
 .search-bar {
@@ -408,12 +451,13 @@ $primary-font:  'Lato', sans-serif;
     }
 }
 
+// Shop all page
 .shop-all {
     font-family: $primary-font;
     display: flex;
     justify-content: center;
     .filter {
-        margin-left: 3%;
+        margin-left: 2%;
         padding: auto 10px;
         padding-left: 3%;
         padding-right: 3%;
@@ -445,9 +489,11 @@ $primary-font:  'Lato', sans-serif;
         justify-content: space-evenly;
         flex-wrap: wrap;
         padding: 30px 20px;
+        margin-right: 2%;
+        background-color: #f9f9f9;
         .product {
             display: inline-block;
-            padding: 10px 8px;
+            padding: 10px 5px;
             width: 180px;
             text-align: center;
             font-size: 0.9rem;
@@ -467,6 +513,7 @@ $primary-font:  'Lato', sans-serif;
                 height: 125px;
                 font-size: 0.9rem;
                 padding: 5px;
+                border-top: solid 4px $primary-color;
             }
         }
     }
@@ -477,15 +524,28 @@ $primary-font:  'Lato', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: $secondary-darkcolor;
     .login {
         font-family: $primary-font;
-        width: 30%;
+        width: 100%;
+        position: relative;
+        width: 450px;
+        display: block;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        background-color: $secondary-lightcolor;
+        &-pic {
+            width: 480px;
+            height: 450px;
+        }
         h3 {
             text-transform: uppercase;
             font-size: 2rem;
             padding: 30px;
             padding-top: 0;
+            text-align: center;
             letter-spacing: 3px;
             .current-register {
                 color: $primary-color;
@@ -502,18 +562,21 @@ $primary-font:  'Lato', sans-serif;
         label {
             text-transform: uppercase;
             display: block;
+            padding-left: 30px;
             padding-bottom: 10px;
         }
         input {
             width: 400px;
             height: 40px;
             display: block;
+            margin: auto auto;
             margin-bottom: 20px;
         }
         .remember-me {
             margin-top: -20px;
             display: flex;
             align-items: center;
+            padding-left: 30px;
             label, input {
                 display: inline;
                 vertical-align: center;
@@ -521,37 +584,59 @@ $primary-font:  'Lato', sans-serif;
                 margin: 0;
                 text-transform: capitalize;
             }
+            label {
+                padding-left: 10px;
+            }
             input {
-                width: 30px;
+                width: 20px;
                 height: 60px;
             }
         }
         input[type="submit"] {
-            font-size: 3rem;
-            width: 200px;
-            height: 100px;
+            font-size: 1rem;
+            width: 120px;
+            height: 35px;
             text-transform: uppercase;
-            text-align: center;
+            margin: auto auto;
+            background-color: $secondary-darkcolor;
         }
         a.forget-password {
             color: $primary-color;
             text-decoration: none;
+            display: block;
+            margin: auto auto;
+            text-align: center;
         }
     }
     .signup {
         font-family: $primary-font;
-        margin: 50px 30px;
-        width: 30%;
-        margin-top: 0;
+        width: 100%;
+        position: relative;
+        width: 850px;
+        display: block;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        background-color: $secondary-lightcolor;
+        &-pic {
+            width: 930px;
+            height: 606px;
+            position: absolute;
+        }
         table {
-            margin-left: -170px;
+            margin: auto auto;
             td {
                 padding-right: 20px;
+                label {
+                    padding-left: 5px;
+                }
             }
         }
         h3 {
             text-transform: uppercase;
             font-size: 2rem;
+            margin: auto auto;
+            display: block;
+            width: 390px;
             padding: 30px;
             padding-top: 0;
             letter-spacing: 3px;
@@ -586,11 +671,142 @@ $primary-font:  'Lato', sans-serif;
             font-size: 0.9rem;
         }
         input[type="submit"] {
-            font-size: 1.5rem;
-            width: 70px;
-            height: 30px;
+            font-size: 1rem;
+            width: 120px;
+            height: 35px;
             text-transform: uppercase;
+            margin: auto auto;
+            background-color: $secondary-darkcolor;
         }
+    }
+}
+
+.footer {
+    height: 100%;
+    position: relative;
+    padding: 0;
+    background-color: $primary-darkcolor;
+    font-family: $primary-font;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    &__links {
+        display: flex;
+        padding: 20px;
+        .information, .brands, .contact {
+            padding: 20px;
+            display: inline-block;
+            width: 300px;
+            h3 {
+                font-size: 1.2rem;
+                padding: 5px;
+            }
+            li {
+                font-size: 0.9rem;
+                list-style-type: none;
+                color: black;
+                padding: 5px;
+            }
+            a {
+                color: black;
+            }
+        }
+        .contact {
+            width: 350px;
+        }
+    }
+    .chatbox {
+        width: 360px;
+        height: 300px;
+        position: absolute;
+        bottom: 30px;
+        right: 20px;
+        border: solid 4px black;
+        color: black;
+        text-align: center;
+        border-radius: 20px;
+        background-color: $secondary-darkcolor;
+        font-family: $primary-font;
+        letter-spacing: 4px;
+        h3 {
+            font-size: 1.3rem;
+            background-color: black;
+            padding: 10px;
+            color: $secondary-lightcolor;
+        }
+
+    }
+    &__subscribe {
+        background-color: $secondary-lightcolor;
+        color: black;
+        text-align: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        width: 100%;
+        &--newsletter {
+            width: 580px;
+            display: inline-block;
+            border-right: solid 4px $primary-color;
+            margin-left: -20px;
+            label {
+                font-size: 1.4rem;
+                font-weight: bold;
+                padding: 10px;
+            }
+            input {
+                width: 400px;
+                height: 40px;
+                padding: 10px;
+            }
+            button {
+                width: 40px;
+                height: 40px;
+                background-color: $secondary-darkcolor;
+                font-size: 1rem;
+            }
+            button:hover {
+                background-color: $tertiary-color;
+                color: $secondary-darkcolor;
+            }
+        }
+        &--social {
+            width: 250px; 
+            display: inline-block;
+            h3 {
+                font-size: 1.3rem;
+                font-weight: bold;
+            }
+        }
+        .fa {
+            padding: 20px;
+            font-size: 30px;
+            width: 65px;
+            height: 65px;
+            border-radius: 50%;
+            text-align: center;
+            text-decoration: none;
+            margin: 5px 2px;
+            margin: 5px;
+          }
+          
+          .fa:hover {
+              background: $secondary-darkcolor;
+              color: $tertiary-color;
+          }
+        .fa-instagram, .fa-facebook {
+            background: $tertiary-color;
+            color: $secondary-darkcolor;
+        }
+    }
+    &__copyright {
+        font-family: $secondary-font;
+        background-color: black;
+        color: white;
+        text-transform: uppercase;
+        padding: 10px 20px;
+        letter-spacing: 5px;
+        font-size: 0.6rem;
+        text-align: center;
     }
 }
 
