fixed local login and cleaned up code

--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -116,7 +116,7 @@ $primary-font:  'Lato', sans-serif;
                 border-bottom: none;
                 li {
                     width: 215px;
-                    padding: 15px 10px;
+                    padding: 15px 2px;
                     margin-left: -10px;
 
                 }
@@ -145,7 +145,7 @@ $primary-font:  'Lato', sans-serif;
                 border-bottom: none;
                 li {
                     width: 215px;
-                    padding: 15px 10px;
+                    padding: 15px 2px;
                     margin-left: -10px;
 
                 }
@@ -592,13 +592,14 @@ $primary-font:  'Lato', sans-serif;
                 height: 60px;
             }
         }
-        input[type="submit"] {
+        button {
             font-size: 1rem;
             width: 120px;
             height: 35px;
             text-transform: uppercase;
             margin: auto auto;
             background-color: $secondary-darkcolor;
+            display: block;
         }
         a.forget-password {
             color: $primary-color;
@@ -631,18 +632,18 @@ $primary-font:  'Lato', sans-serif;
                 margin-bottom: 10px;
                 width: 50%;
             }
-            span:nth-child(5) {
-                display: block;
-                input {
-                    display: inline-block;
-                    width: 600px;
-                }
-                button {
-                    display: inline;
-                    width: 100px;
-                    height: 40px;
-                }
-            }
+            // span:nth-child(5) {
+            //     display: block;
+            //     input {
+            //         display: inline-block;
+            //         width: 600px;
+            //     }
+            //     button {
+            //         display: inline;
+            //         width: 100px;
+            //         height: 40px;
+            //     }
+            // }
             // // Date picker
             // div.rw-widget-container {
             //     width: 700px;
@@ -716,6 +717,101 @@ $primary-font:  'Lato', sans-serif;
             a:hover.other-register {
                 border-bottom: $primary-color solid 3px;
             }
+        }
+    }
+}
+
+.cart {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: $secondary-darkcolor;
+    height: 100%;    
+    &__basket {
+        background-color: $secondary-lightcolor;
+        padding: 20px;
+        width: 700px;
+        height: 100%;
+        h3 {
+            padding: 10px 0px;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 1.5rem;
+        }
+        a {
+            color: $primary-originalcolor;
+            font-weight: bold;
+        }
+        &--items {
+            margin-bottom: 10px;
+        }
+        &--item {
+            height: 120px;
+            margin-bottom: 8px;
+            background-color: white;
+        }
+        &--item-delete {
+            text-transform: uppercase;
+        }
+        &--item-photo {
+            background-color: black;
+            height: 100px;
+            width: 100px;
+            display: inline-block;
+            margin: 10px;
+        }
+        &--item-details {
+            display: inline-block;
+            padding: 14px 15px;
+            vertical-align: top;
+            position: relative;
+        }
+        &--item-quantity {
+            display: inline-block;
+            position: absolute;
+            left: 300px;
+            top: 35px;
+        }
+        &--item-price {
+            display: inline-block;
+            position: absolute;
+            left: 400px;
+            top: 35px;
+        }
+    }
+    &__payment {
+        background-color: white;
+        padding: 25px;
+        width: 400px;
+        h4 {
+            padding: 10px;
+            color: $primary-color;
+            letter-spacing: 2px;
+        }
+        td {
+            padding: 7px 10px;
+            padding-right: 40px;
+        }
+        td:nth-child(2) {
+            font-weight: bold;
+        }
+        tr:last-child {
+            font-weight: bold;
+            border-top: $primary-color solid 3px;
+            font-size: 1.2rem;
+        }
+        button {
+            background-color: $primary-color;
+            color: white;
+            padding: 8px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            display: block;
+            width: 100%;
+            margin-top: 20px;
         }
     }
 }
