--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -91,7 +91,7 @@
       border-bottom: none; }
       .header__bottom--nav .dropdown-content--categories .category li {
         width: 215px;
-        padding: 15px 10px;
+        padding: 15px 2px;
         margin-left: -10px; }
   .header__bottom--nav .dropdown-content--brands {
     display: none;
@@ -115,7 +115,7 @@
       border-bottom: none; }
       .header__bottom--nav .dropdown-content--brands .category li {
         width: 215px;
-        padding: 15px 10px;
+        padding: 15px 2px;
         margin-left: -10px; }
   .header__bottom--nav .dropdown-content--catname--hover, .header__bottom--nav .dropdown-content--brandname--hover {
     display: inline-block;
@@ -452,13 +452,14 @@
       .register .login .remember-me input {
         width: 20px;
         height: 60px; }
-    .register .login input[type="submit"] {
+    .register .login button {
       font-size: 1rem;
       width: 120px;
       height: 35px;
       text-transform: uppercase;
       margin: auto auto;
-      background-color: #c9d6de; }
+      background-color: #c9d6de;
+      display: block; }
     .register .login a.forget-password {
       color: #3d8ab9;
       text-decoration: none;
@@ -486,15 +487,6 @@
         display: inline-block;
         margin-bottom: 10px;
         width: 50%; }
-      .register .signup form span:nth-child(5) {
-        display: block; }
-        .register .signup form span:nth-child(5) input {
-          display: inline-block;
-          width: 600px; }
-        .register .signup form span:nth-child(5) button {
-          display: inline;
-          width: 100px;
-          height: 40px; }
       .register .signup form label {
         text-transform: uppercase;
         display: block;
@@ -529,6 +521,84 @@
         padding-bottom: 10px; }
       .register .signup h3 a:hover.other-register {
         border-bottom: #3d8ab9 solid 3px; }
+
+.cart {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #c9d6de;
+  height: 100%; }
+  .cart__basket {
+    background-color: #eff3f5;
+    padding: 20px;
+    width: 700px;
+    height: 100%; }
+    .cart__basket h3 {
+      padding: 10px 0px;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 1.5rem; }
+    .cart__basket a {
+      color: #42a8e7;
+      font-weight: bold; }
+    .cart__basket--items {
+      margin-bottom: 10px; }
+    .cart__basket--item {
+      height: 120px;
+      margin-bottom: 8px;
+      background-color: white; }
+    .cart__basket--item-delete {
+      text-transform: uppercase; }
+    .cart__basket--item-photo {
+      background-color: black;
+      height: 100px;
+      width: 100px;
+      display: inline-block;
+      margin: 10px; }
+    .cart__basket--item-details {
+      display: inline-block;
+      padding: 14px 15px;
+      vertical-align: top;
+      position: relative; }
+    .cart__basket--item-quantity {
+      display: inline-block;
+      position: absolute;
+      left: 300px;
+      top: 35px; }
+    .cart__basket--item-price {
+      display: inline-block;
+      position: absolute;
+      left: 400px;
+      top: 35px; }
+  .cart__payment {
+    background-color: white;
+    padding: 25px;
+    width: 400px; }
+    .cart__payment h4 {
+      padding: 10px;
+      color: #3d8ab9;
+      letter-spacing: 2px; }
+    .cart__payment td {
+      padding: 7px 10px;
+      padding-right: 40px; }
+    .cart__payment td:nth-child(2) {
+      font-weight: bold; }
+    .cart__payment tr:last-child {
+      font-weight: bold;
+      border-top: #3d8ab9 solid 3px;
+      font-size: 1.2rem; }
+    .cart__payment button {
+      background-color: #3d8ab9;
+      color: white;
+      padding: 8px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      display: block;
+      width: 100%;
+      margin-top: 20px; }
 
 .footer {
   height: 100%;
